<resources>
    <!-- UI Elements -->
    <string name="app_name">MobilERP</string>
    <string name="title_activity_admin">Management</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stock_input">Update stock</string>
    <string name="drug_list">List of products</string>
    <string name="depleted_stock">Depleted products</string>
    <string name="today_sales">Today\'s statement</string>
    <string name="month_sales">Monthly statement</string>
    <string name="most_sold_products">Most sold products</string>
    <string name="least_sold_products">Least sold products</string>
    <string name="custom_statement">Custom statement</string>
    <string name="pharmacy">Stock</string>
    <string name="sales">Sales</string>
    <string name="patients">Patients</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_display_items">List of items</string>
    <string name="item_name">Item</string>
    <string name="item_price">Price</string>
    <string name="item_total">Total units</string>
    <string name="title_activity_barcode_scanner">Stock input</string>
    <string name="item_barcode">Barcode</string>
    <string name="new_item">New item</string>
    <string name="save">Save</string>
    <string name="add_to_sale">Add to sale</string>
    <string name="finish">Finish</string>
    <string name="amount_items">Amount</string>
    <string name="total_sale">Total sale</string>
    <string name="title_activity_sales">Sale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MobilERP</string>
    <string name="make_sale">Sales</string>
    <string name="manager">Management</string>
    <string name="new_sale">New Sale</string>
    <string name="settings">Settings</string>
    <string name="current_net">Current network</string>
    <string name="scan_network">Scan LAN for server</string>
    <string name="server_addr">Server address</string>
    <string name="update_credentials">Update credentials</string>
    <string name="server_settings">Server</string>
    <string name="server_config">Server configuration</string>
    <string name="user_settings">User settings</string>
    <string name="finish_sale">Finish sale</string>
    <string name="pdf_export">Export to PDF</string>
    <string name="last_sale_date">Last sale date</string>
    <string name="preferences_file">Settings</string>
    <string name="use_offline_mode">Use offline mode</string>
    <string name="backup_database">Backup database</string>
    <string name="remember_user">Remember user?</string>
    <string name="users_management">Users</string>
    <string name="server_management">Server</string>
    <string name="current_user">Current user</string>
    <string name="drug_store_list">Drugstores list</string>
    <string name="drugstores">Drugstores</string>
    <string name="add_store">Add store</string>
    <string name="service">Service</string>
    <string name="add_service">Add service</string>
    <string name="service_name">Service name</string>
    <string name="list_services">Services list</string>
    <string name="service_code">Service code</string>

    <!-- Misc -->
    <string name="database_name">mobilerp.db</string>
    <string name="logfile">upload_operations.log</string>
    <string name="has_pending_ops">has_pending_ops</string>
    <string name="daily_sales_report_filename">daily_sales_report_</string>
    <string name="monthly_sales_report_filename">monthly_sales_report_</string>
    <string name="depleted_report_filename">depleted_report_</string>

    <!-- User messages -->
    <string name="user_hint">Input your username</string>
    <string name="pass_hint">Input your password</string>
    <string name="wait_string">"Please wait&#8230;"</string>
    <string name="added"> added</string>
    <string name="data_fail">"Failed to receive data"</string>
    <string name="disable_offline_mode_first">Disable offline mode first</string>
    <string name="sync_pending_operations">Upload pending operations</string>
    <string name="sync_pending_operations_success">All operations uploaded successfully</string>
    <string name="sync_pending_operations_error">An error occurred during sync</string>
    <string name="not_connected">Not connected to a network</string>
    <string name="searching_server">Searching for server</string>
    <string name="server_addr_updated">Server address updated</string>
    <string name="download_finished">Download finished</string>
    <string name="offline_mode_enabled">Offline mode enabled</string>
    <string name="offline_mode_disabled">Offline mode disabled</string>
    <string name="no_db_file">No database found</string>
    <string name="error_saving_operation">Error saving operation for remote logging</string>

    <!-- Server Messages -->
    <string name="srv_err_400_bad_request">Malformed data in request</string>
    <string name="srv_err_401_access_denied">Access denied</string>
    <string name="srv_err_404_not_found">Item not found</string>
    <string name="srv_err_405_not_allowed">Method not allowed</string>
    <string name="srv_err_406_not_accepted">Unacceptable request</string>
    <string name="srv_err_409_conflict">Data conflict</string>
    <string name="srv_err_412_precondition_failed">Data precondition failed</string>

    <string name="srv_err_428_dup_precond">Duplicated operation</string>
    <string name="srv_err_500_server_error">Server error</string>
    <string name="srv_err_unknown">Unknown server error</string>
    <string name="srv_op_success">Server Response :: Success</string>
    <string name="srv_op_fail">Server Response :: Failed</string>

    <!-- Offline messages -->
    <string name="app_err_not_found">Item not found</string>
    <string name="app_err_error">Application error</string>
    <string name="app_err_access_denied">Application error: Access denied</string>
    <string name="app_err_unknown">Application error: Unknown error</string>
    <string name="app_op_success">Operation Success</string>
    <string name="app_op_fail">Operation Failed</string>


    <string name="exiting_units">Exisiting units</string>
    <string name="item_id_sale">Sale #</string>
    <string name="total_earning">Earnings</string>
    <string name="total_products_sold">Total products sold</string>
    <string name="download_pdf_export">Download PDF report</string>
    <string name="report_end_date">To date</string>
    <string name="report_start_date">From date</string>
    <string name="update_data">Update data</string>
    <string name="no_data_in_report">Report data was empty!</string>
    <string name="custom_sales_report_filename">sales_report</string>

    <!-- Update Sale Dialog -->
    <string name="edit_article">Edit article</string>
    <string name="this_sale">This sale</string>
    <string name="edit_canceled">Edit cancelled</string>
</resources>
