<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.journeyapps.barcodescanner.DecoratedBarcodeView
            android:id="@+id/barcodePreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_span="2"
            android:layout_weight="1" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBarcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/item_barcode" />

        <EditText
            android:id="@+id/etBarcode"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:inputType="text"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            android:gravity="center_vertical"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/etName"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:enabled="false"
            android:inputType="textPersonName"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvPrice"
            android:gravity="center_vertical"
            android:text="@string/item_price" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTotalUnits"
            android:gravity="center_vertical"
            android:text="@string/item_total" />

        <EditText
            android:id="@+id/etTotalUnits"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:enabled="true"
            android:inputType="number"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTotalSale"
            android:gravity="center_vertical"
            android:text="@string/total_sale" />

        <EditText
            android:id="@+id/etTotalSale"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:enabled="false"
            android:inputType="number"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/add_to_sale" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/endSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/finish" />
    </TableRow>

</TableLayout>