<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/relativeLayout4"
    android:padding="1dp">

    <TableRow>

        <TextView
            android:id="@+id/tvBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/service_code" />

        <EditText
            android:id="@+id/etBarcode"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="end"
            android:inputType="text"
            android:padding="3dp"
            android:textAlignment="viewEnd" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="219dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:padding="3dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/item_price" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="219dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="3dp"
            android:textAlignment="viewEnd" />
    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/save" />
    </TableRow>

</TableLayout>