<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.mobilerp.pathwaysstudio.mobilerp.Settings">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvServerAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="30dp"
        android:text="@string/server_addr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"/>

    <EditText
        android:id="@+id/etServerAddr"
        android:layout_width="303dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerAddr"

        />

    <CheckBox
        android:id="@+id/cbOfflineMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="28dp"
        android:text="@string/use_offline_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanServer"/>

    <Button
        android:id="@+id/btnScanServer"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="33dp"
        android:text="@string/scan_network"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etServerAddr"/>

    <Button
        android:id="@+id/btnBackupDB"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/backup_database"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbOfflineMode"/>

    <Button
        android:id="@+id/btnUploadPendingOps"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/sync_pending_operations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackupDB"/>

</android.support.constraint.ConstraintLayout>
