<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcodePreview"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcodePreview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tvBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_barcode"/>

    <TextView
        android:id="@+id/tvBarcodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBarcode"
        android:layout_below="@id/etName"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBarcode"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_price"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPrice"
        android:layout_below="@id/tvBarcodeValue"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPrice"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_total"/>

    <EditText
        android:id="@+id/etTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotal"
        android:layout_below="@id/etPrice"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:inputType="number"/>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"/>

</RelativeLayout>
